--- a/examples-documents-dashboards/Dashboards/Flexdashboard/Butterfly-species-richness-in-LA.Rmd
+++ b/examples-documents-dashboards/Dashboards/Flexdashboard/Butterfly-species-richness-in-LA.Rmd
@@ -172,7 +172,7 @@ iNaturalist[,'source'] = 'iNaturalist'
 # Concatenate latitude, longitude
 iNaturalist$site = paste0(iNaturalist$latitude, ', ', iNaturalist$longitude)
 
-# The iNaturalist data set presents a challenge slightly different from the pseudovariables found above.
+# The iNaturalist data set presents a slightly different challenge from the pseudovariables found above.
 # The number of animals of each species must be computed from repeated entries, per site.
 
 iNaturalist = merge(iNaturalist, iNaturalist %>% count(species, site, name = 'Number'))
