--- a/examples-documents-dashboards/R Markdown/R Markdown amidst Madison parks.Rmd
+++ b/examples-documents-dashboards/R Markdown/R Markdown amidst Madison parks.Rmd
@@ -32,7 +32,7 @@ font-size: 16px;
 
 # Introduction {-}
 
-This document is part of teaching materials created for the CarpentryCon conference. The purpose is to practise R Markdown, including basic features such as Markdown markup and code chunks, along with more special features such as [cross-references for figures and tables](https://bookdown.org/yihui/rmarkdown-cookbook/cross-ref.html).
+This document is part of teaching materials created for the [CarpentryCon 2020 conference](https://2020.carpentrycon.org/). The purpose is to practise R Markdown, including basic features such as Markdown markup and code chunks, along with more special features such as [cross-references for figures and tables](https://bookdown.org/yihui/rmarkdown-cookbook/cross-ref.html).
 
 The conference was originally going to take place in Madison, so let's look at some [open data from the City of Madison](https://data-cityofmadison.opendata.arcgis.com/datasets/parks?geometry=-89.997%2C43.007%2C-88.679%2C43.183).
 
